# viscon

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: download_coco.sh
scripts/dataset_import/: coco.sh
src/viscon/: __init__.py
src/viscon/content_dataclass/: __init__.py  base.py  image_content.py  mask_content.py
src/viscon/dataset_import/: coco.py
tests/content_dataclass/: image_content_test.py  mask_content_test.py
